--- a/roles/developer/tasks/install-gcloud.yml
+++ b/roles/developer/tasks/install-gcloud.yml
@@ -1,16 +1,20 @@
 ---
 - name: download gcloud {{ gcloud_version }} archive
-  get_url: url=https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/{{ gcloud_pkg }}
-            checksum={{ gcloud_checksums[ansible_system] }}
-            dest=/tmp/{{ gcloud_pkg }}
-            timeout=600
+  get_url:
+    url: https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/{{ gcloud_pkg }}
+    checksum: "{{ gcloud_checksums[ansible_system] }}"
+    dest: /tmp/{{ gcloud_pkg }}
+    timeout: 600
 
 #- name: remove gcloud archive directory
 #  file: path=/{{ gcloud_install_path }}/google-cloud-sdk state=absent
 #  become: no
 
 - name: unpack gcloud {{ gcloud_version }} archive
-  unarchive: src=/tmp/{{ gcloud_pkg }} dest={{ ansible_env.HOME }} copy=no
+  unarchive:
+    src: /tmp/{{ gcloud_pkg }}
+    dest: "{{ ansible_env.HOME }}"
+    copy: no
   become: no
 
 - name: install gcloud
@@ -20,5 +24,7 @@
   become: no
 
 - name: remove gcloud archive
-  file: path=/tmp/{{ gcloud_pkg }} state=absent
+  file:
+    path: /tmp/{{ gcloud_pkg }}
+    state: absent
   become: no
