convert loops on package
Convert loops on packages to use the newer syntax of specifying multiple
names per task.

--- a/roles/base/tasks/packages_Debian.yml
+++ b/roles/base/tasks/packages_Debian.yml
@@ -1,15 +1,14 @@
 ---
 - name: install packages
   apt:
-    name: "{{ item }}"
+    name:
+      - direnv
+      - fzf
+      - parallel
+      - tree
+      - vim
     state: latest
     update_cache: yes
   become: yes
-  with_items:
-    - direnv
-    - fzf
-    - parallel
-    - tree
-    - vim
   tags:
     - packages
