add ham foundations and aprs readonly igate config

--- a/home.yml
+++ b/home.yml
@@ -13,3 +13,9 @@ all:
     ham:
       hosts:
         hifi:
+          sdr_igate:
+            login: "{{ vault_igate_login }}"
+            passcode: "{{ vault_igate_passcode }}"
+            call: K7BCX-10
+            lat: "45.568449N"
+            long: "122.670984W"
