fix the ham role and apply it to ham hosts
* apply the ham role to ham hosts
* install xastir
* remove unnecessary bits from the aprs-igate role

--- a/roles/ham/tasks/main.yml
+++ b/roles/ham/tasks/main.yml
@@ -14,9 +14,10 @@
     - hamradio-tools
     - hamradio-training
     - extra-xdg-menus
+    - xastir
     update_cache: yes
     cache_valid_time: 86400
     state: latest
   become: yes
 
-- import_playbook: direwolf.yml
+- include_tasks: direwolf.yml
