--- a/roles/aprs-igate/tasks/main.yml
+++ b/roles/aprs-igate/tasks/main.yml
@@ -1,5 +1,36 @@
 ---
+- name: aprs config directory
+  file:
+    path: /etc/aprs
+    state: directory
+  become: yes
+
 - name: sdr-igate.conf
   template:
     src: sdr-igate.conf.tmpl
-    dest: sdr-igate.conf
+    dest: /etc/aprs/sdr-igate.conf
+  become: yes
+
+- name: igate.sh
+  copy:
+    src: igate.sh
+    dest: /usr/local/bin/igate.sh
+    mode: preserve
+  notify:
+    - restart igate
+  become: yes
+
+- name: igate unit
+  copy:
+    src: igate.service
+    dest: /etc/systemd/system/igate.service
+  notify:
+    - reload systemd
+    - restart igate
+  become: yes
+
+- name: igate service
+  systemd:
+    service: igate
+    state: started
+  become: yes
