--- a/roles/ham/tasks/main.yml
+++ b/roles/ham/tasks/main.yml
@@ -14,6 +14,7 @@
     - hamradio-tools
     - hamradio-training
     - extra-xdg-menus
+    - trustedqsl
     - xastir
     update_cache: yes
     cache_valid_time: 86400
