fix tasks and variables
* Make sure some tasks have become set (e.g. to restart or reload
  services)
* fix indentation to register the result of a stat task correctly.

--- a/roles/aprs-igate/handlers/main.yml
+++ b/roles/aprs-igate/handlers/main.yml
@@ -2,8 +2,10 @@
 - name: reload systemd
   systemd:
     daemon_reload: yes
+  become: yes
 
 - name: restart igate
   systemd:
     name: igate
-    status: restarted
+    state: restarted
+  become: yes
