split rtl_fm and direwolf into separate services
Split rtl_fm and direwolf into separate services and stop using a shell
script to try to control the igate pipeline.

rtl_fm now runs in the aprs service with its stdout hooked up to a named
pipe and direwolf runs in the igate service with its stdin hookup to the
other end of the named pipe.

--- a/roles/aprs-igate/files/aprs.service
+++ b/roles/aprs-igate/files/aprs.service
@@ -1,22 +1,23 @@
 [Unit]
-Description=igate
+Description=APRS
 After=aprs.socket
 Requires=aprs.socket
 
 [Service]
+StandardOutput=fd:aprs.socket
+StandardError=journal
 Sockets=aprs.socket
 
-StandardInput=fd:aprs.socket
-
-ExecStart=direwolf -c /etc/aprs/sdr-igate.conf -r 24000 -D 1 -t 0 -
+#ExecStart=rtl_fm -f 144.390M -g 49.6
+ExecStart=rtl_fm -f 144.390M
 
 KillMode=process
-Restart=on-failure
 RestartSec=5
+Restart=on-failure
 RestartPreventExitStatus=255
 
 Type=simple
 
 [Install]
 WantedBy=multi-user.target sockets.target
-Alias=igate.service
+Alias=aprs.service
