--- a/roles/aprs-igate/handlers/main.yml
+++ b/roles/aprs-igate/handlers/main.yml
@@ -9,3 +9,9 @@
     name: igate
     state: restarted
   become: yes
+
+- name: restart aprs
+  systemd:
+    name: aprs
+    state: restarted
+  become: yes
