use the journal for stderr and stdout for the igate service

--- a/roles/aprs-igate/files/aprs.service
+++ b/roles/aprs-igate/files/aprs.service
@@ -4,6 +4,7 @@ After=aprs.socket
 Requires=aprs.socket
 
 [Service]
+StandardInput=inherit
 StandardOutput=fd:aprs.socket
 StandardError=journal
 Sockets=aprs.socket
