--- a/roles/developer/tasks/packages_Debian.yml
+++ b/roles/developer/tasks/packages_Debian.yml
@@ -23,7 +23,7 @@
 - name: chrome apt repository
   apt_repository:
     filename: google-chrome
-    repo: "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main"
+    repo: "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main"
   become: yes
 
 #- name: git-lfs apt key
