update to Go 1.16

--- a/roles/developer/tasks/install-go.yml
+++ b/roles/developer/tasks/install-go.yml
@@ -15,7 +15,8 @@
 - name: unpack go{{ golang_version }} archive
   unarchive:
     src: /tmp/{{ golang_pkg }}
-    dest: /usr/local copy=no
+    dest: /usr/local
+    copy: no
   become: yes
 
 - name: build go toolchain
