configure transmitting igate
Configure a transmitting igate using the new Yaesu FT-2980 w/ the easy
digi.

Rename all the SDR igate related stuff to have an sdr- prefix.

Move the SDR igate tasks into their own file to keep the TX and SDR
igate configurations separate.

Disable the systemd services needed for the SDR igate.

--- a/home.yml
+++ b/home.yml
@@ -13,9 +13,11 @@ all:
     ham:
       hosts:
         hifi:
-          sdr_igate:
+          igate:
             login: "{{ vault_igate_login }}"
             passcode: "{{ vault_igate_passcode }}"
             call: K7BCX-10
             lat: "45.568449N"
             long: "122.670984W"
+            input_device: plughw:2,0
+            output_device: plughw:2,0
