--- a/roles/aprs-igate/tasks/main.yml
+++ b/roles/aprs-igate/tasks/main.yml
@@ -1,67 +1,3 @@
 ---
-- name: aprs config directory
-  file:
-    path: /etc/aprs
-    state: directory
-  become: yes
-
-- name: sdr-igate.conf
-  template:
-    src: sdr-igate.conf.tmpl
-    dest: /etc/aprs/sdr-igate.conf
-  become: yes
-
-- name: igate.sh
-  copy:
-    src: igate.sh
-    dest: /usr/local/bin/igate.sh
-    mode: preserve
-  notify:
-    - restart igate
-  become: yes
-
-- name: igate unit
-  copy:
-    src: igate.service
-    dest: /etc/systemd/system/igate.service
-  notify:
-    - reload systemd
-    - restart igate
-  become: yes
-
-- name: aprs unit
-  copy:
-    src: aprs.service
-    dest: /etc/systemd/system/aprs.service
-  notify:
-    - reload systemd
-    - restart aprs
-  become: yes
-
-- name: aprs socket
-  copy:
-    src: aprs.socket
-    dest: /etc/systemd/system/aprs.socket
-  notify:
-    - reload systemd
-    - restart aprs
-    - restart igate
-  become: yes
-
-- name: igate service started
-  systemd:
-    service: igate
-    state: started
-  notify:
-    - reload systemd
-    - restart igate
-  become: yes
-
-- name: aprs service started
-  systemd:
-    service: aprs.service
-    state: started
-  notify:
-    - reload systemd
-    - restart aprs
-  become: yes
+- import_tasks: igate.yml
+- import_tasks: sdr-igate.yml
