give USB sound card on igate a persistent name
Add a new role, usb-audio, to allow a USB sound card to have a
predictable name across reboots and irrespective of the order in which
devices are plugged in.

Write the igate service's logs to both journald and the console.

--- a/home.yml
+++ b/home.yml
@@ -19,8 +19,8 @@ all:
             call: K7BCX-10
             lat: "45.568449N"
             long: "122.670984W"
-            input_device: plughw:2,0
-            output_device: plughw:2,0
+            input_device: plughw:usb_audio,0
+            output_device: plughw:usb_audio,0
     flight-tracker:
       hosts:
         hifi:
