--- a/group_vars/os_Darwin.yml
+++ b/group_vars/os_Darwin.yml
@@ -1,3 +1,6 @@
 ---
 protoc_os: osx
 user_font_dir: "{{ ansible_env.HOME }}/Library/Fonts"
+homebrew_prefix:
+  x86_64: "/usr/local"
+  arm64: "/opt/homebrew"
